test/log/permutation/vgather_vv_i32_m.txt
vgather_vv_i32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vgather_vv_i32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vgather_vv_i32_m.c:30:6: warning: no previous prototype for 'vgather_vv_i32_m_golden' [-Wmissing-prototypes]
   30 | void vgather_vv_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,uint32_t *b,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~
vgather_vv_i32_m.c: In function 'vgather_vv_i32_m_golden':
vgather_vv_i32_m.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vgather_vv_i32_m.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vgather_vv_i32_m.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vgather_vv_i32_m.c: In function 'main':
vgather_vv_i32_m.c:37:14: warning: declaration of 'mask' shadows a parameter [-Wshadow]
   37 |     bool16_t mask;
      |              ^~~~
vgather_vv_i32_m.c:30:40: note: shadowed declaration is here
   30 | void vgather_vv_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,uint32_t *b,int32_t *exp_result) {
      |                              ~~~~~~~~~~^~~~
vgather_vv_i32_m.c:38:16: warning: declaration of 'maskoff' shadows a parameter [-Wshadow]
   38 |     int32x16_t maskoff;
      |                ^~~~~~~
vgather_vv_i32_m.c:30:54: note: shadowed declaration is here
   30 | void vgather_vv_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,uint32_t *b,int32_t *exp_result) {
      |                                             ~~~~~~~~~^~~~~~~
vgather_vv_i32_m.c:39:16: warning: declaration of 'a' shadows a parameter [-Wshadow]
   39 |     int32x16_t a;
      |                ^
vgather_vv_i32_m.c:30:71: note: shadowed declaration is here
   30 | void vgather_vv_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,uint32_t *b,int32_t *exp_result) {
      |                                                              ~~~~~~~~~^
vgather_vv_i32_m.c:40:17: warning: declaration of 'b' shadows a parameter [-Wshadow]
   40 |     uint32x16_t b;
      |                 ^
vgather_vv_i32_m.c:30:83: note: shadowed declaration is here
   30 | void vgather_vv_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,uint32_t *b,int32_t *exp_result) {
      |                                                                         ~~~~~~~~~~^
vgather_vv_i32_m.c:47:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   47 |     int32_t exp_result[16] = {0};
      |             ^~~~~~~~~~
vgather_vv_i32_m.c:30:94: note: shadowed declaration is here
   30 | void vgather_vv_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,uint32_t *b,int32_t *exp_result) {
      |                                                                                     ~~~~~~~~~^~~~~~~~~~
vgather_vv_i32_m.c:49:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   49 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vgather_vv_i32_m.c:63:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   63 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
vgather_vv_i32_m.c: In function 'vgather_vv_i32_m_golden':
vgather_vv_i32_m.c:78:1: error: expected declaration or statement at end of input
   78 | }
      | ^
vgather_vv_i32_m.c:30:40: warning: unused parameter 'mask' [-Wunused-parameter]
   30 | void vgather_vv_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,uint32_t *b,int32_t *exp_result) {
      |                              ~~~~~~~~~~^~~~
vgather_vv_i32_m.c:30:54: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vgather_vv_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,uint32_t *b,int32_t *exp_result) {
      |                                             ~~~~~~~~~^~~~~~~
vgather_vv_i32_m.c:30:71: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vgather_vv_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,uint32_t *b,int32_t *exp_result) {
      |                                                              ~~~~~~~~~^
vgather_vv_i32_m.c:30:83: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vgather_vv_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,uint32_t *b,int32_t *exp_result) {
      |                                                                         ~~~~~~~~~~^
vgather_vv_i32_m.c:30:94: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vgather_vv_i32_m_golden(uint64_t *mask,int32_t *maskoff,int32_t *a,uint32_t *b,int32_t *exp_result) {
      |                                                                                     ~~~~~~~~~^~~~~~~~~~
At top level:
vgather_vv_i32_m.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vgather_vv_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vgather_vv_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vgather_vv_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vgather_vv_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed